crates/dag-macros/tests/ui/workflow_if_selector_pointer_non_string.stderr
error: if_! requires `selector_pointer = "/json/pointer"`
  --> tests/ui/workflow_if_selector_pointer_non_string.rs:38:28
   |
38 |         selector_pointer = 123,
   |                            ^^^
